--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,16 @@
 .app {
     display: grid;
     place-items: center;
-    background-color: #dadbd3;
     height: 100vh;
+    flex: 1;
+    background-image: url("https://images4.alphacoders.com/936/thumb-1920-936378.jpg");
+    background-repeat: repeat;
+    background-position: center;
   }
   
   .app__body {
     display: flex;
+    flex: 1;
     background-color: #ededed;
     margin-top: -50px;
     height: 90vh;
