--- a/src/Login.css
+++ b/src/Login.css
@@ -26,13 +26,12 @@
   .login__container > button {
     margin-top: 25px;
     text-transform: inherit !important;
-    border: 2px solid #c4403c !important;
-    color: rgb(0, 0, 0);
-    color: #c4403c;
+    color: #fff;
+    background-color: #c4403c;
   }
   
   .mailIconLogin {
-    color: rgb(206, 82, 82);
+    color: rgb(255, 255, 255);
     margin-right: 5px;
   }
   
