--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   .app__body {
     display: flex;
     flex: 1;
-    background-color: #ededed;
+    background-color: azure;
     margin-top: -50px;
     height: 90vh;
     width: 90vw;
