--- a/src/Chat.css
+++ b/src/Chat.css
@@ -40,7 +40,7 @@
     padding: 10px;
     width: fit-content;
     border-radius: 10px;
-    background-color: #dcf8c6;
+    background-color: azure;
     margin-bottom: 30px;
 }
 
