--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    border-right: 1px solid lightgray;
+    border-right: 1px solid white;
 }
 
 .sidebar__headerRight {
@@ -26,7 +26,7 @@
 .sidebar__search {
     display: flex;
     align-items: center;
-    background-color: #f6f6f6;
+    background-color: azure;
     height: 39px;
     padding: 10px;
 }
@@ -53,6 +53,6 @@
 
 .sidebar__chats {
     flex: 1;
-    background-color: white;
+    background-color: azure;
     overflow-y: scroll;
 }
