--- a/src/Login.css
+++ b/src/Login.css
@@ -12,7 +12,7 @@
   .login__container {
     padding: 100px;
     text-align: center;
-    background-color: white;
+    background-color: whitesmoke;
     border-radius: 20px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.12);
   }
@@ -26,12 +26,12 @@
   .login__container > button {
     margin-top: 25px;
     text-transform: inherit !important;
-    color: #fff;
-    background-color: #c4403c;
+    color: #000;
+    background-color: rgb(198, 236, 236);
   }
   
   .mailIconLogin {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     margin-right: 5px;
   }
   
