--- a/src/SidebarChat.css
+++ b/src/SidebarChat.css
@@ -2,11 +2,11 @@
     display: flex;
     padding: 20px;
     cursor: pointer;
-    border-bottom: 1px solid #f6f6f6;
+    border-bottom: 2px solid white;
 }
 
 .sidebarChat :hover{
-    background-color: #ebebeb;
+    background-color: white;
 }
 
 .sidebarChat__info > h2 {
